# metaensemble

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GLOSSARY.md  PERFORMANCE.md  RELEASE-CHECKLIST.md  SYSTEM-CARD.md  USER-GUIDE.md
evals/: README.md
evals/cassettes/: README.md  bootstrap.jsonl
evals/configs/: default.yaml
evals/datasets/suite_a/: tasks.yaml
evals/datasets/suite_b/: items.yaml
evals/fixtures/: __init__.py  build.py
evals/fixtures/legacy/: README.md  api_manifest.json  pyproject.toml  test_big_module.py
evals/fixtures/legacy/legacy/: __init__.py  big_module.py
evals/fixtures/paginator/: README.md  pagination.py  pyproject.toml  test_pagination.py
evals/reports/: 20260704T140844Z-full.md
evals/runners/: __init__.py  acceptance.py  api.py  metrics.py  suite_a.py
metaensemble/: README.md  __init__.py  cli.py
metaensemble/commands/: dispatch.md  executors.md  ledger.md  limits.md  perf.md  relaunch.md  standup.md
metaensemble/config/: budgets.example.yaml  quality.example.yaml
metaensemble/hooks/: __init__.py  _common.py  deliverable_sync.py  file_event.py  post_task.py  pre_task.py  session_start.py  session_summary.py  subagent_stop.py
metaensemble/lib/: __init__.py  config.py  cost_gate.py  dispatch.py  doctor.py  file_events.py  ids.py  installer.py  ledger.py  manifest.py  native_state.py  overlaps.py  quality_gate.py  quality_runners.py  reconcile.py  recording.py  relaunch.py  runtime_payload.py  runtime_state.py  sidecar.py  topology.py  transcript.py
metaensemble/mcp/: __init__.py  queries.py  server.py
metaensemble/output-styles/: deliverable.md  wire.md
metaensemble/roles/: architect.md  backend.md  code-quality.md  data-engineer.md  devops.md  docs.md  frontend.md  ml-engineer.md  test-engineer.md
metaensemble/schemas/: brief.schema.json  manifest.schema.json  role.schema.json
metaensemble/skills/metaensemble-protocol/: SKILL.md
metaensemble/state/migrations/: 001_init.sql  002_outcome_extended.sql  003_run_provenance.sql
metaensemble/statusline/: me_status.py
metaensemble/tests/: conftest.py  test_agentid_lifecycle.py  test_cli.py  test_cost_gate.py  test_curated_name_filter.py  test_dispatch.py  test_doctor.py  test_doctor_c11_catalog_hygiene.py  test_eval_acceptance.py  test_eval_fixtures.py  test_eval_harness.py  test_eval_suite_a.py  test_eval_suite_a_e2e.py  test_hook_security_invariants.py  test_hooks.py  test_ids.py  test_installer.py  test_ledger.py  test_ledger_schema_complete.py  test_manifest.py  test_mcp_queries.py  test_mcp_server.py  test_native_state.py  test_no_retired_vocabulary.py  test_perf_e2e.py  test_perf_handoff.py  test_perf_hooks.py  test_perf_ledger.py  test_prompt_surface_budget.py  test_quality_commands.py  test_quality_gate.py  test_reconcile.py  test_recording.py  test_relaunch.py  test_roles.py  test_runtime_state.py  test_sidecar.py  test_signal_activations.py  test_stats.py  test_statusline.py  (+7 more)
metaensemble/tests/fixtures/projects/data-pipeline-dbt/: README.md  dbt_project.yml  expected_activations.json
metaensemble/tests/fixtures/projects/data-pipeline-dbt/docs/: ARCHITECTURE.md
metaensemble/tests/fixtures/projects/infra-terraform/: .pre-commit-config.yaml  README.md  expected_activations.json
metaensemble/tests/fixtures/projects/infra-terraform/.github/workflows/: plan.yml
metaensemble/tests/fixtures/projects/python-library/: README.md  expected_activations.json  pyproject.toml
metaensemble/tests/fixtures/projects/python-library/tests/: test_mylib.py
metaensemble/tests/fixtures/projects/somali-mini/: README.md  docker-compose.yml  expected_activations.json  pyproject.toml
metaensemble/tests/fixtures/projects/somali-mini/data/raw/source=huggingface-c4-so/: sample.jsonl
metaensemble/tests/fixtures/projects/somali-mini/docs/: ARCHITECTURE.md  training.md
metaensemble/tests/fixtures/projects/somali-mini/src/somdialc/: train.py
metaensemble/tests/fixtures/projects/web-app-django/: expected_activations.json  manage.py
metaensemble/tools/: __init__.py  executors.py  ledger.py  limits.py  perf.py  standup.py  stats.py
scripts/: role-to-agent.py  test.sh  verify-installed-cli.sh
